[gd_scene load_steps=11 format=3 uid="uid://c383wxvj0hh7q"]

[ext_resource type="Texture2D" uid="uid://uidjcdf62vif" path="res://Asset/Characters/Beatrix/charlotte-removebg-preview.png" id="1_4y0t7"]
[ext_resource type="PackedScene" uid="uid://bplpwpncwxjh4" path="res://Scene/CardUI.tscn" id="1_fxwnf"]
[ext_resource type="Script" uid="uid://1mh1lv3r2q5c" path="res://Script/BattleManager.gd" id="1_vsh2u"]
[ext_resource type="Texture2D" uid="uid://cmpprcr84ive7" path="res://Asset/enemies/1.png" id="2_fxwnf"]
[ext_resource type="Texture2D" uid="uid://ccclxldrmru4w" path="res://Asset/Backgrounds/background 1.jpg" id="3_tkjg1"]
[ext_resource type="Script" uid="uid://bwy2biobw6kaq" path="res://Script/Character.gd" id="4_y8d5v"]
[ext_resource type="Script" uid="uid://dafxw2p825bmt" path="res://Script/Enemy.gd" id="6_f2o1h"]
[ext_resource type="Texture2D" uid="uid://de3vu6immvp4r" path="res://Asset/enemies/2.png" id="8_ehisa"]
[ext_resource type="Texture2D" uid="uid://h8k4v6mepfq8" path="res://Asset/enemies/3.png" id="9_36gl3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vsh2u"]
size = Vector2(311.5, 317.5)

[node name="Battlefield" type="Node2D"]
script = ExtResource("1_vsh2u")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(579.25, 325)
scale = Vector2(1.7017673, 1.5523809)
texture = ExtResource("3_tkjg1")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(0, 1)

[node name="PlayerTeam" type="Node2D" parent="."]

[node name="Beatrix" type="Node2D" parent="PlayerTeam"]
script = ExtResource("4_y8d5v")
char_name = "Beatrix"

[node name="Sprite2D" type="Sprite2D" parent="PlayerTeam/Beatrix"]
position = Vector2(255, 314)
scale = Vector2(0.7, 0.7)
texture = ExtResource("1_4y0t7")

[node name="HealthBar" type="ProgressBar" parent="PlayerTeam/Beatrix"]
offset_left = 205.0
offset_top = 186.0
offset_right = 299.0
offset_bottom = 213.0
value = 100.0

[node name="ShieldLabel" type="Label" parent="PlayerTeam/Beatrix"]
offset_left = 273.0
offset_top = 216.0
offset_right = 334.0
offset_bottom = 239.0
theme_override_colors/font_color = Color(0.007843138, 0, 1, 1)
text = "Shield:0"

[node name="Area2D" type="Area2D" parent="PlayerTeam/Beatrix"]
position = Vector2(88, 133)

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerTeam/Beatrix/Area2D"]
visible = false
position = Vector2(113, 218)
shape = SubResource("RectangleShape2D_vsh2u")

[node name="Charlotte" type="Node2D" parent="PlayerTeam"]
script = ExtResource("4_y8d5v")
char_name = "Charlotte"

[node name="Sprite2D" type="Sprite2D" parent="PlayerTeam/Charlotte"]
position = Vector2(359, 421)
scale = Vector2(0.7, 0.685)
texture = ExtResource("1_4y0t7")

[node name="HealthBar" type="ProgressBar" parent="PlayerTeam/Charlotte"]
offset_left = 313.0
offset_top = 291.0
offset_right = 407.0
offset_bottom = 318.0
value = 100.0

[node name="ShieldLabel" type="Label" parent="PlayerTeam/Charlotte"]
offset_left = 386.0
offset_top = 324.0
offset_right = 447.0
offset_bottom = 347.0
theme_override_colors/font_color = Color(0, 0.11764706, 1, 1)
text = "Shield:0"

[node name="Area2D" type="Area2D" parent="PlayerTeam/Charlotte"]
position = Vector2(273, 137)

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerTeam/Charlotte/Area2D"]
visible = false
position = Vector2(113, 218)
shape = SubResource("RectangleShape2D_vsh2u")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Hand" type="HBoxContainer" parent="CanvasLayer"]
unique_name_in_owner = true
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.95000005
anchor_right = 0.505
anchor_bottom = 0.96000004
offset_left = -57.0
offset_top = -110.60004
offset_right = 59.23999
offset_bottom = 31.919983
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 15

[node name="CardUi" parent="CanvasLayer/Hand" instance=ExtResource("1_fxwnf")]
layout_mode = 2

[node name="RestartButton" type="Button" parent="CanvasLayer"]
unique_name_in_owner = true
offset_left = 1050.0
offset_top = 18.0
offset_right = 1153.0
offset_bottom = 63.0
text = "Restart"

[node name="EnergyLabel" type="Label" parent="CanvasLayer"]
offset_left = 1023.0
offset_top = 567.0
offset_right = 1103.0
offset_bottom = 606.0

[node name="EndTurnButton" type="Button" parent="CanvasLayer"]
offset_left = 1007.0
offset_top = 511.0
offset_right = 1126.0
offset_bottom = 542.0
text = "End Turn"

[node name="CardSlots" type="HBoxContainer" parent="CanvasLayer"]
unique_name_in_owner = true
offset_left = 3.0
offset_top = 3.0
offset_right = 413.0
offset_bottom = 164.0

[node name="EnemyTeam" type="Node2D" parent="."]

[node name="Enemy" type="Node2D" parent="EnemyTeam"]
position = Vector2(799, -6)
script = ExtResource("6_f2o1h")
base_damage = 20
char_name = "Enemy1"
is_enemy = true

[node name="Sprite2D" type="Sprite2D" parent="EnemyTeam/Enemy"]
position = Vector2(1.9999733, 357)
scale = Vector2(-0.5, 0.445)
texture = ExtResource("2_fxwnf")

[node name="HealthBar" type="ProgressBar" parent="EnemyTeam/Enemy"]
offset_left = -62.0
offset_top = 252.0
offset_right = 32.0
offset_bottom = 279.0
scale = Vector2(0.8952639, 0.9224108)
theme_override_colors/font_color = Color(0.79573834, 0, 0.21928853, 1)
theme_override_colors/font_outline_color = Color(0.8838147, 0.33180755, 1.92523e-07, 1)
step = 1.0
value = 100.0

[node name="ShieldLabel" type="Label" parent="EnemyTeam/Enemy"]
offset_left = -135.0
offset_top = 277.0
offset_right = -74.0
offset_bottom = 300.0
theme_override_colors/font_color = Color(0, 0.11764706, 1, 1)
text = "Shield:0"

[node name="Area2D" type="Area2D" parent="EnemyTeam/Enemy"]
position = Vector2(-21.465454, 120)
scale = Vector2(0.8952639, 0.9224108)

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyTeam/Enemy/Area2D"]
visible = false
position = Vector2(170.25, 209.25)
shape = SubResource("RectangleShape2D_vsh2u")

[node name="Enemy2" type="Node2D" parent="EnemyTeam"]
position = Vector2(799, -6)
script = ExtResource("6_f2o1h")
base_shield = 5
char_name = "Enemy2"
is_enemy = true

[node name="Sprite2D" type="Sprite2D" parent="EnemyTeam/Enemy2"]
position = Vector2(55.74997, 459)
scale = Vector2(-0.5, 0.445)
texture = ExtResource("8_ehisa")

[node name="HealthBar" type="ProgressBar" parent="EnemyTeam/Enemy2"]
offset_left = 8.999991
offset_top = 351.0
offset_right = 102.99999
offset_bottom = 378.0
scale = Vector2(0.8952639, 0.9224108)
theme_override_colors/font_color = Color(0.79573834, 0, 0.21928853, 1)
theme_override_colors/font_outline_color = Color(0.8838147, 0.33180755, 1.92523e-07, 1)
step = 1.0
value = 100.0

[node name="ShieldLabel" type="Label" parent="EnemyTeam/Enemy2"]
offset_left = -38.0
offset_top = 396.0
offset_right = 23.0
offset_bottom = 419.0
theme_override_colors/font_color = Color(0.08627451, 0.039215688, 1, 1)
text = "Shield:0"

[node name="Area2D" type="Area2D" parent="EnemyTeam/Enemy2"]
position = Vector2(32.28454, 222)
scale = Vector2(0.8952639, 0.9224108)

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyTeam/Enemy2/Area2D"]
visible = false
position = Vector2(170.25, 209.25)
shape = SubResource("RectangleShape2D_vsh2u")

[node name="Enemy3" type="Node2D" parent="EnemyTeam"]
position = Vector2(1598, -12)
script = ExtResource("6_f2o1h")
base_shield = 5
char_name = "Enemy3"
is_enemy = true

[node name="Sprite2D" type="Sprite2D" parent="EnemyTeam/Enemy3"]
position = Vector2(-628.24994, 391)
scale = Vector2(-0.5, 0.445)
texture = ExtResource("9_36gl3")

[node name="HealthBar" type="ProgressBar" parent="EnemyTeam/Enemy3"]
offset_left = -692.24994
offset_top = 286.0
offset_right = -598.24994
offset_bottom = 313.0
scale = Vector2(0.8952639, 0.9224108)
theme_override_colors/font_color = Color(0.79573834, 0, 0.21928853, 1)
theme_override_colors/font_outline_color = Color(0.8838147, 0.33180755, 1.92523e-07, 1)
step = 1.0
value = 100.0

[node name="ShieldLabel" type="Label" parent="EnemyTeam/Enemy3"]
offset_left = -736.0
offset_top = 323.0
offset_right = -675.0
offset_bottom = 346.0
theme_override_colors/font_color = Color(0.1882353, 0.18039216, 1, 1)
text = "Shield:0"

[node name="Area2D" type="Area2D" parent="EnemyTeam/Enemy3"]
position = Vector2(-651.7154, 154)
scale = Vector2(0.8952639, 0.9224108)

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyTeam/Enemy3/Area2D"]
visible = false
position = Vector2(170.25, 209.25)
shape = SubResource("RectangleShape2D_vsh2u")

[connection signal="pressed" from="CanvasLayer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="CanvasLayer/EndTurnButton" to="." method="_on_end_turn_button_pressed"]
